# workspace_root.rs

./: CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/: dependabot.yml
__test__/: Cargo.toml
__test__/src/: tokio.rs
package/: CHANGELOG.md  Cargo.toml  README.md
package/src/: lib.rs
package/src/async_std/: mod.rs
package/src/smol/: mod.rs
package/src/tokio/: mod.rs
tests/: Cargo.toml
tests/src/: async_std.rs  lib.rs  smol.rs
