[workspace]
resolver = "2"
members = [
    "package",
    "tests",
]

[workspace.dependencies]
async-std = "^1.13.0"
get_dir = "~0.5.0"
macro_rules_attribute = "~0.2.2"
smol = "^2.0.0"
smol-macros = "~0.1.1"
tokio = "^1.40.0"

[workspace.dependencies.workspace_root]
path = "./package"
features = ["all"]
