[package]
name = "workspace_root"
version = "0.2.0"
authors = ["Alpheus <contact@alphe.us>"]
edition = "2024"
rust-version = "1.85.0"
description = """
A utility to get workspace root
"""
readme = "README.md"
homepage = "https://github.com/alpheusday/workspace_root.rs"
repository = "https://github.com/alpheusday/workspace_root.rs"
license = "MIT"
keywords = [
    "get",
    "workspace",
    "root",
    "fs",
    "util",
]
categories = [
    "filesystem"
]
include = [
    "src/*", 
    "Cargo.toml",
    "README.md",
]

[package.metadata.docs.rs]
features = ["all"]

[dependencies.get_dir]
workspace = true
optional = true

[dependencies.async-std]
workspace = true
optional = true

[dependencies.smol]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true
features = ["io-util"]

[features]
default = ["get_dir"]
async_std = ["dep:async-std", "get_dir/async-std"]
async-std = ["async_std"]
smol = ["dep:smol", "get_dir/smol"]
tokio = ["dep:tokio", "get_dir/tokio"]
all = ["async_std", "smol", "tokio"]
